🚨 Arena notifications and broadcast notification module

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,6 +10,7 @@
 
 // Custom Scroll Bar
 @import "node_modules/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar";
+@import "node_modules/toastr/build/toastr";
 
 .level-up-button {
     margin-bottom: 10px;
