--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,6 +7,7 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "node_modules/font-awesome/css/font-awesome";
 
 // Custom Scroll Bar
 @import "node_modules/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar";
